tests/errors/syntax_errors/try.py
try:
    print(5)
except Exception as e:
    print(e)
